--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="PLEASE ADD YOUR SESSION HERE INCONNU~XD~"
-PREFIX=.
-OWNER_NUMBER=554488138425
-SUDO_NUMBER=554488138425
-OWNER_NAME=INCONNU BOY
+SESSION_ID="INCONNU~XD~KpYxTRzR#arbDLRSigyATEXf4pNfeqCmiwwGr_cWtzzpsIdZDc9U"
+PREFIX=👌🏾
+OWNER_NUMBER=237651442921
+SUDO_NUMBER=237651442921
+OWNER_NAME=𝐄=𝐌𝐂²
 AUTO_STATUS_SEEN=true
 AUTO_BIO=true
 AUTO_STATUS_REACT=true
@@ -16,5 +16,5 @@ ANTIBOT_WARNINGS=3
 REJECT_CALL=false
 NOT_ALLOW=true
 AUTO_STATUS_REACT=true
-MODE=public
+MODE=peivate
 WELCOME=false
