--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="INCONNU~XD~KpYxTRzR#arbDLRSigyATEXf4pNfeqCmiwwGr_cWtzzpsIdZDc9U"
+SESSION_ID="INCONNU~XD~apJwzSSY#syUDmp8hNSwTphmXRqzzMGBaIb5Cr-rJXQipus53-rs"
 PREFIX=👌🏾
 OWNER_NUMBER=237651442921
 SUDO_NUMBER=237651442921
